--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jeremy Zamora website</title>
-    <link rel="icon" href="/img/Personal Logo-32x32.png">
+    <link rel="Logo" href="/img/PersonalLogo-32x32.png">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" rel="normalize">
     <link rel="stylesheet" type="text/css" href="css/style.production.css">
 </head>
 
 
 <body>
     <header class="page-header">
-        <img class="page-header__item" src="img/Personal Logo-32x32.png" alt="Personal Logo">
+        <img class="page-header__item" src="img/PersonalLogo-32x32.png" alt="Personal Logo">
         <nav class="page-header__item">
             <ul role="menubar" class="navigation-list">
                 <li role="presentation">
@@ -24,7 +24,7 @@
                     <a href="about.html" role="menuitem" class="navigation-list__item">About</a>
                 </li> 
                 <li role="presentation">
-                    <a href="contact.html" role="menuitem" class="navigation-list__item">contact</a>
+                    <a href="contact.html" role="menuitem" class="navigation-list__item">Contact</a>
                 </li>
                 <li role="presentation">
                     <a href="work.html" role="menuitem" class="navigation-list__item">Projects</a>
@@ -50,7 +50,7 @@
         <img src="img/iconmonstr-github-1.svg" alt="GitHub">
         </a> 
         <a href="https://www.linkedin.com/in/jeremy-zamora-6829b7171" target="_blank">
-        <img src="img/LinkedIn-Logo.wine.svg" height="40x40" alt="LinkedIn">
+        <img src="img/LinkedIn-Logo.wine.svg" height="40" width="40" alt="LinkedIn">
         </a>
     </div>
 </footer>
